Javadoc changes to support DerUtils
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>