@@ -224,7 +224,6 @@
                     <version>${version.plugin.javadoc}</version>
                     <configuration>
                         <source>11</source>
-                        <release>11</release>
                         <failOnError>true</failOnError>
                         <!-- we are not interested in each file that is generated -->
                         <quiet>true</quiet>
@@ -342,6 +341,8 @@
 <!--                        </offlineLinks>-->
                         <additionalJOptions combine.children="append">
                             <additionalJOption>-J-Dhttp.agent=maven-javadoc-plugin</additionalJOption>
+                            <additionalJOption>--add-exports=java.base/sun.security.util=io.helidon.common.pki
+                            </additionalJOption>
                             <!--<additionalJOption>- -frames</additionalJOption>-->
                         </additionalJOptions>
                         <additionalOptions>
